--- a/assets/css/particle.css
+++ b/assets/css/particle.css
@@ -19,7 +19,7 @@ canvas {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #5e72e4;
+	background-color: #323437;
 	background-repeat: no-repeat;
 	background-size: 20%;
 	background-position: 50% 50%;
